Fix Background Gradient Wrapping Isssue

--- a/public/styles.css
+++ b/public/styles.css
@@ -37,6 +37,7 @@ body {
   padding: 0;
   font-family: 'Arial', sans-serif;
   background: radial-gradient(circle at 10% 40%, #110030, #11002c, #110029, #110025, #100021, #0f001e, #0d001a, #0a0017, #080013, #05000d, #030007, #000000);
+  background-attachment: fixed; 
 }
 
 .App {
